--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -175,6 +175,7 @@ include ../blocks/spoiler/spoiler
 include ../blocks/state/state
 include ../blocks/status-button/status-button
 include ../blocks/status/status
+include ../blocks/step-info/step-info
 include ../blocks/steps/steps
 include ../blocks/sticky-message/sticky-message
 include ../blocks/summary-table/summary-table
@@ -207,6 +208,7 @@ include ../components/content/content
 include ../components/content/nd-content
 include ../components/contract-panel/contract-panel
 include ../components/conversation/conversation
+include ../components/cover/cover
 include ../components/dashboard/dashboard
 include ../components/document/document
 include ../components/facilities/facilities
@@ -219,6 +221,7 @@ include ../components/header/header
 include ../components/header/nd-header
 include ../components/lead/lead
 include ../components/location/location
+include ../components/location/nd-location
 include ../components/main-lead/main-lead
 include ../components/main-menu/main-menu
 include ../components/main-menu/nd-main-menu
@@ -262,6 +265,7 @@ include ../components/popup-subscribe/popup-subscribe
 include ../components/popup-success/popup-success
 include ../components/popup-warning/popup-warning
 include ../components/profile-info/profile-info
+include ../components/progress-scale/progress-scale
 include ../components/promo/promo
 include ../components/records/records
 include ../components/registration-form/registration-form
