--- a/app/pages/ha-edit-space/ha-edit-space.pug
+++ b/app/pages/ha-edit-space/ha-edit-space.pug
@@ -5,11 +5,12 @@ block head
 
 block bodyClasses
   - var bodyCls = ' is-sm-noheader';
+  - var isNoFooter = true
 
 block header
   - var headerClass = ' is-login'
   - var pageClass = ''
-  - var isMap = false
+  - var isMap = true
   - var host = true
 
 block content
