--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -92,6 +92,26 @@
     }
   }
 
+  &_wide {
+    padding: 0 32px;
+
+    @include screen('xlg', max, 2) {
+      padding: 0 pxtovw(32, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      padding: 0 pxtovw(50, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding: 0 pxtovw(50, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      padding: 0 pxtovw(20, 375);
+    }
+  }
+
   &_centered {
     display: flex;
     flex-direction: column;
