--- a/app/blocks/logo/nd-logo.scss
+++ b/app/blocks/logo/nd-logo.scss
@@ -89,4 +89,29 @@
       height: pxtovw(31, 375);
     }
   }
+
+  &_cov {
+    width: 182px;
+    height: 37px;
+
+    @include screen('xlg', max, 2) {
+      width: pxtovw(182, 1660);
+      height: pxtovw(37, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      width: pxtovw(182, 1366);
+      height: pxtovw(37, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      width: pxtovw(127, 960);
+      height: pxtovw(27, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      width: pxtovw(150, 375);
+      height: pxtovw(31, 375);
+    }
+  }
 }
