--- a/app/components/side-navigation/nd-side-navigation.scss
+++ b/app/components/side-navigation/nd-side-navigation.scss
@@ -497,4 +497,25 @@
       }
     }
   }
+
+  &_add {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    box-sizing: border-box;
+
+    @include rule(padding-top, (xl: 45px, xlg: 45, lg: 45, md: 45, sm: 45));
+    @include rule(padding-bottom, (xl: 36px, xlg: 36, lg: 42, md: 42, sm: 42));
+    @include rule(min-height, (xl: 450px, xlg: 450, lg: 427, md: 0));
+
+    #{$b} {
+      &__step, &__note {
+        box-sizing: border-box;
+
+        @include rule(padding-left, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 30));
+        @include rule(padding-right, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 60));
+      }
+    }
+  }
 }
