--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -11,11 +11,11 @@ block header
   - var pageClass = ' nd-page_main'
 
 block content
-  - var menuList = [{name: "Общее", href: "#nav-common"}, {name: "Search", href: "#nav-search"}, {name: "Rental Summary", href: "#nav-rental-summary"}, {name: "Deal Passport", href: "#nav-deal"}, {name: "Guest Account", href: "#nav-ga"}, {name: "Host Account", href: "#nav-ha"}];
-  //- , {name: "HA - Single Space", href: "#nav-ha-space"}, {name: "Edit Space", href: "#nav-edit-space"}];
+  - var menuList = [{name: "Общее", href: "#nav-common"}, {name: "Search", href: "#nav-search"}, {name: "Rental Summary", href: "#nav-rental-summary"}, {name: "Deal Passport", href: "#nav-deal"}, {name: "Guest Account", href: "#nav-ga"}, {name: "Host Account", href: "#nav-ha"}, {name: "Edit Space", href: "#nav-edit-space"}, {name: "Add Space", href: "#nav-add-space"}];
+  //- , {name: "HA - Single Space", href: "#nav-ha-space"}];
   - var nav = {menu: menuList, menuLinkCls: ' js-nd-anchor'}
   +nd-page-header._grid._grid_acc
-    .nd-container.nd-hide
+    .nd-container.nd-hide-from-md
       +nd-page-header-side
       +nd-page-header-main
         +e.mb-menu.nd-hide-from-md
@@ -29,16 +29,30 @@ block content
 
       +nd-content-main
         +b.sitemap
-          +e.group#nav-edit-space.nd-hide
-            +e.head
-              +page-title Страницы Host Account - Edit Space (only HD breakpoint)
-            +e.list
-              +nd-link(href="ha-edit-space.html") Spacepool - Edit Space - Location (ha-edit-space.html)
           +e.group#nav-ha-space.nd-hide
             +e.head
               +page-title Страницы Host Account - Single Space (only HD breakpoint)
             +e.list
               +nd-link(href="ha-space.html") Spacepool - Host Space - Dashboard (ha-space.html)
+          +e.group#nav-add-space
+            +e.head
+              +page-title Страницы Add Space
+            +e.list
+              +nd-link(href="add-space.html") Spacepool - Add Space - Start (add-space.html)
+              +nd-link(href="add-space-location.html") Spacepool - Add Space - Location (add-space-location.html)
+              //- +nd-link(href="add-space-description.html") Spacepool - Add Space - Title and Description (add-space-description.html)
+              //- +nd-link(href="add-space-facilities.html") Spacepool - Add Space - Facilities (add-space-facilities.html)
+              //- +nd-link(href="add-space-rules.html") Spacepool - Add Space - House rules(add-space-rules.html)
+              //- +nd-link(href="add-space-photo.html") Spacepool - Add Space - Photo (add-space-photo.html)
+              //- +nd-link(href="add-space-photo-2.html") Spacepool - Add Space - Photo (2 page)(add-space-photo-2.html)
+              //- +nd-link(href="add-space-conditions.html") Spacepool - Add Space - Terms and conditions (add-space-conditions.html)
+              //- +nd-link(href="add-space-conditions-2.html") Spacepool - Add Space - Terms and conditions (2 page) (add-space-conditions-2.html)
+              //- +nd-link(href="add-space-listing.html") Spacepool - Add Space - Listing (add-space-listing.html)
+          //- +e.group#nav-edit-space
+          //-   +e.head
+          //-     +page-title Страницы Host Account - Edit Space
+          //-   +e.list
+          //-     +nd-link(href="ha-edit-space.html") Spacepool - Edit Space - Location (ha-edit-space.html)
           +e.group#nav-ha
             +e.head
               +page-title Страницы Host Account (only HD breakpoint)
