--- a/app/styles/helpers/_basics.scss
+++ b/app/styles/helpers/_basics.scss
@@ -25,7 +25,6 @@ button::-moz-focus-inner {
 
 input,
 textarea {
-
   &::placeholder {
     color: $nd-color-placeholder;
   }
@@ -42,9 +41,17 @@ input:-webkit-autofill {
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
+input:-webkit-autofill:active,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+textarea:-webkit-autofill:active {
   animation: cursor .3s ease 1 !important;
   transition: background-color 50000000000s ease-in-out 0s !important; // Убираем желтую заливку для автозаполнения в Chrome
+}
+
+textarea:-internal-autofill-selected, input:-internal-autofill-selected {
+  background-color: transparent !important;
 }
 
 /* ##########
