--- a/app/blocks/space/nd-space.scss
+++ b/app/blocks/space/nd-space.scss
@@ -490,6 +490,10 @@
       }
     }
 
+    &_fz22 {
+      @include rule(font-size, (xl: 22px, xlg: 22, lg: 22, md: 22, sm: 20));
+    }
+
     &_fz28 {
       font-size: 28px;
       line-height: 1;
