--- a/app/blocks/step-info/step-info.scss
+++ b/app/blocks/step-info/step-info.scss
@@ -80,6 +80,10 @@
     display: block;
     width: 100%;
     font-weight: 700;
-    line-height: 1.9;
+    line-height: 1;
+
+    &:not(:first-child) {
+      margin-top: .45em;
+    }
   }
 }
