--- a/app/components/location/nd-location.pug
+++ b/app/components/location/nd-location.pug
@@ -7,7 +7,7 @@ mixin nd-location(data)
     +nd-form().__form(data-validated-form data-submit-disabled)
       +form-section
         +form-section-header()
-          +e.H3.title_fz24._fw400 Space location
+          +e.H3.title_fz24._md-fz20._fw400 Space location
         +form-section-content
           +input(type="hidden" name="coordinates" data-map-coordinates="add-map")
           +nd-grid.nd-grid_int32
