--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -41,6 +41,7 @@ include ../blocks/divider/divider
 include ../blocks/dots/dots
 include ../blocks/dropdown/dropdown
 include ../blocks/error/error
+include ../blocks/facility-grid/facility-grid
 include ../blocks/facility-list/facility-list
 include ../blocks/facility/facility
 include ../blocks/factor/factor
