--- a/app/blocks/form/nd-form.scss
+++ b/app/blocks/form/nd-form.scss
@@ -164,6 +164,12 @@
         }
       }
     }
+
+    &_mt82 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 82px, xlg: 82, lg: 113, md: 100, sm: 58));
+      }
+    }
   }
 
   &__content {
@@ -296,7 +302,11 @@
     }
 
     &_fz24 {
-      @include rule(font-size, (xl: 24px, xlg: 24, lg: 24, md: 20, sm: 20));
+      @include rule(font-size, (xl: 24px, xlg: 24, lg: 24, md: 24, sm: 20));
+    }
+
+    &_md-fz20 {
+      @include rule(font-size, (md: 20, sm: 20));
     }
 
     &_sm-fz15 {
@@ -359,6 +369,10 @@
       font-weight: 700;
     }
 
+    &_fw500 {
+      font-weight: 500;
+    }
+
     a {
       text-decoration: underline;
       text-underline-offset: 1px;
@@ -388,6 +402,12 @@
       }
     }
 
+    &_mt23 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 23px, xlg: 23, lg: 23, md: 23, sm: 18));
+      }
+    }
+
     &_mt25 {
       &:not(:first-child) {
         margin-top: 25px;
@@ -413,6 +433,16 @@
     &_mt44 {
       &:not(:first-child) {
         @include rule(margin-top, (xl: 44px, xlg: 44, lg: 44, md: 44, sm: 44));
+      }
+    }
+
+    &_fz17 {
+      @include rule(font-size, (xl: 17px, xlg: 17, lg: 17, md: 17, sm: 15));
+
+      line-height: 1.24;
+
+      @include screen('sm', max, 2) {
+        line-height: 1.2;
       }
     }
 
@@ -575,6 +605,10 @@
         @include rule(margin-top, (xl: 34px, xlg: 34, lg: 34, md: 34, sm: 36));
       }
     }
+
+    &_fxe {
+      justify-content: flex-end;
+    }
   }
 
   &__button {
@@ -584,6 +618,10 @@
 
     &_mw303 {
       @include rule(min-width, (xl: 303px, xlg: 303, lg: 303, md: 303, sm: 180));
+    }
+
+    &_mw320 {
+      @include rule(min-width, (xl: 320px, xlg: 320, lg: 320, md: 320, sm: 180));
     }
   }
 
@@ -982,6 +1020,60 @@
           margin-top: pxtovw(30, 375);
         }
       }
+    }
+  }
+
+  &__facilities {
+    &:not(:first-child) {
+      @include rule(margin-top, (xl: 60px, xlg: 60, lg: 12, md: 15, sm: 13));
+    }
+
+    &_mt10 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 10px, xlg: 10, lg: 14, md: 10, sm: 10));
+      }
+    }
+  }
+
+  &_app {
+    display: block;
+    box-sizing: border-box;
+    background-color: #fff;
+    padding: 51px 40px 140px;
+
+    @include rule(margin-top, (sm: 30));
+    @include rule(border-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 3));
+
+    @include screen('xlg', max, 2) {
+      padding: pxtovw(51, 1660) pxtovw(40, 1660) pxtovw(140, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      padding: pxtovw(54, 1366) pxtovw(42, 1366) pxtovw(67, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      padding: pxtovw(54, 960) pxtovw(42, 960) pxtovw(67, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      padding: pxtovw(28, 375) pxtovw(18, 375) pxtovw(36, 375);
+    }
+
+    &_pb118 {
+      @include rule(padding-bottom, (xl: 118px, xlg: 118, lg: 77, md: 64, sm: 47));
+    }
+
+    #{$b} {
+      &__content {
+        &:not(:first-child) {
+          @include rule(margin-top, (xl: 17px, xlg: 17, lg: 17, md: 17, sm: 40));
+        }
+      }
+    }
+
+    &:last-child {
+      @include rule(margin-bottom, (xl: 200px, xlg: 200, lg: 150, md: 100, sm: 100));
     }
   }
 }
