--- a/app/blocks/link/link.pug
+++ b/app/blocks/link/link.pug
@@ -20,6 +20,12 @@ mixin nd-link-icon(iconname, tag)
     +e.SPAN.text
       block
 
+mixin nd-link-image(iconname, tag)
+  +b(tag || 'a').nd-link_icon&attributes(attributes)
+    +e.IMG(src=("assets/images/nd/" + iconname + ".svg") class=("__icon _" + iconname))
+    +e.SPAN.text
+      block
+
 mixin nd-link-pdf(data)
   +b(data.tag || 'a').nd-link_pdf&attributes(attributes)
     if data.icon
