--- a/app/pages/add-space/add-space-description.pug
+++ b/app/pages/add-space/add-space-description.pug
@@ -32,6 +32,26 @@ block content
           +nd-side-navigation({addManager: {image: {src:  "assets/images/nd/add-description.svg", class: "_description"}, subtitle: "Step 2", title: "Title and description" }, note: {text: "Tell guests about your space. Describe it’s size, key features.  Ambience and local amenities."}})._add
 
       +nd-content-main
+        +nd-form._app(data-validated-form data-submit-disabled)
+          +form-section
+            +form-section-header()
+              +e.H3.title_fz24._fw400 Title and description
+            +form-section-content
+              +nd-grid
+                +nd-grid-col({ xl: 12 })
+                  +form-section-wrapper
+                    +nd-form-box('Space title')._bg-white
+                      +nd-textarea(type="text" name="spaceName" placeholder="Space Name" rows="1" required)
+                +nd-grid-col({ xl: 12 })
+                  +form-section-wrapper
+                    +nd-form-box('Description')._bg-white
+                      +nd-textarea(type="text" name="spaceDescription" placeholder="Space description" rows="1" required)._sm-fz17._h194
+          +nd-form-panel()._wide.is-fixed
+            .nd-content
+              .nd-container
+                +e.controls
+                  +nd-link-icon('arrow6')._underline._back._back_long.__back Back <span class="nd-hide-sm"> to previous step</span>
+                  +nd-button-icon('button', {iconBlock: true, icon: 'next', loader: true})._next._sm-h32._sm-fz16.__button_mw303(type="submit" disabled) Save and continue
 
 block panels
 
