--- a/app/blocks/form-elements/nd-checkbox.scss
+++ b/app/blocks/form-elements/nd-checkbox.scss
@@ -29,6 +29,17 @@
     line-height: pxtovw(20, 375);
   }
 
+  &_stolzl {
+    font-family: $font-stolzl;
+  }
+
+  &_fz16 {
+    @include rule(font-size, (xl: 16px, xlg: 16, lg: 16, md: 16, sm: 14));
+
+    line-height: (19 / 16);
+    letter-spacing: -.015em;
+  }
+
   &_md-fz16 {
     @include screen('md', max, 2) {
       font-size: pxtovw(16, 960);
