--- a/app/blocks/form-elements/nd-textarea.scss
+++ b/app/blocks/form-elements/nd-textarea.scss
@@ -90,6 +90,10 @@
     @include rule(min-height, (xl: 86px, xlg: 86, lg: 86, md: 86, sm: 107));
   }
 
+  &_h142 {
+    @include rule(min-height, (xl: 142px, xlg: 142, lg: 142, md: 142, sm: 344));
+  }
+
   &_h194 {
     @include rule(min-height, (xl: 194px, xlg: 194, lg: 224, md: 224, sm: 286));
   }
