--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -19,6 +19,7 @@ include ../blocks/breadcrumbs-form/breadcrumbs-form
 include ../blocks/breadcrumbs/breadcrumbs
 include ../blocks/bubble/bubble
 include ../blocks/burger/burger
+include ../blocks/button-add/button-add
 include ../blocks/button-heart/button-heart
 include ../blocks/button/button
 include ../blocks/button/nd-button
