--- a/app/pages/add-space/add-space-photo.pug
+++ b/app/pages/add-space/add-space-photo.pug
@@ -32,6 +32,10 @@ block content
           +nd-side-navigation({addManager: {image: {src:  "assets/images/nd/add-photo.svg", class: "_photo"}, subtitle: "Step 5", title: "Photo" }, note: {text: "Upload images of your space. We recommend taking the photos in landscape format."}})._add
 
       +nd-content-main
+        +nd-form._app._app_pb118(data-validated-form data-submit-disabled)
+          +form-section
+            +form-section-header()
+              +e.H3.title_fz24._fw400 Photos
 
 block panels
 
