--- a/app/pages/ha-edit-space/ha-edit-space-facilities.pug
+++ b/app/pages/ha-edit-space/ha-edit-space-facilities.pug
@@ -52,7 +52,7 @@ block content
               .nd-content__column_main
                 +e.controls
                   +nd-link-icon('cross', 'button')(type="reset")._underline.__reset.js-form-reset Discard <span class="nd-hide-sm">changes</span>
-                  +nd-button('button', true).__button.js-show-success-popup(type="submit" data-callback="serverSave" data-popup="#popup-save-success") Save <span class="nd-hide-sm">changes</span>
+                  +nd-button('button', true).__button(type="submit") Save <span class="nd-hide-sm">changes</span>
 
 block panels
 
