--- a/app/blocks/form-elements/nd-input.scss
+++ b/app/blocks/form-elements/nd-input.scss
@@ -184,6 +184,40 @@
     }
   }
 
+  &_point {
+    @include rule(padding-left, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 30));
+    @include rule(padding-right, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 30));
+    @include rule(background-size, (xl: 5px, xlg: 5, lg: 5, md: 5, sm: 5));
+
+    background-repeat: no-repeat;
+    background-position: 13px 55%;
+    background-image: url("data:image/svg+xml,%3Csvg width='5' height='5' viewBox='0 0 5 5' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='2.5' cy='2.5' r='2.5' fill='%230085FF'/%3E%3C/svg%3E%0A");
+
+    @include screen('xlg', max, 2) {
+      background-position: pxtovw(13, 1660) 55%;
+    }
+
+    @include screen('lg', max, 2) {
+      background-position: pxtovw(13, 1366) 55%;
+    }
+
+    @include screen('md', max, 2) {
+      background-position: pxtovw(13, 960) 55%;
+    }
+
+    @include screen('sm', max, 2) {
+      background-position: pxtovw(13, 375) 50%;
+    }
+
+    &:-ms-input-placeholder {
+      color: $nd-color-placeholder;
+    }
+
+    &::placeholder {
+      color: $nd-color-placeholder;
+    }
+  }
+
   .is-top & {
     border-color: $nd-color-field-border-hover;
     box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0);
