--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -42,7 +42,7 @@ block content
               +nd-link(href="add-space-location.html") Spacepool - Add Space - Location (add-space-location.html)
               +nd-link(href="add-space-description.html") Spacepool - Add Space - Title and Description (add-space-description.html)
               +nd-link(href="add-space-facilities.html") Spacepool - Add Space - Facilities (add-space-facilities.html)
-              //- +nd-link(href="add-space-rules.html") Spacepool - Add Space - House rules(add-space-rules.html)
+              +nd-link(href="add-space-rules.html") Spacepool - Add Space - House rules(add-space-rules.html)
               //- +nd-link(href="add-space-photo.html") Spacepool - Add Space - Photo (add-space-photo.html)
               //- +nd-link(href="add-space-photo-2.html") Spacepool - Add Space - Photo (2 page)(add-space-photo-2.html)
               //- +nd-link(href="add-space-conditions.html") Spacepool - Add Space - Terms and conditions (add-space-conditions.html)
@@ -55,6 +55,7 @@ block content
           //-     +nd-link(href="ha-edit-space.html") Spacepool - Edit Space - Location (ha-edit-space.html)
           //-     +nd-link(href="ha-edit-space-description.html") Spacepool - Edit Space - Title and Description (ha-edit-space-description.html)
           //-     +nd-link(href="ha-edit-space-facilities.html") Spacepool - Edit Space - Facilities (ha-edit-space-facilities.html)
+          //-     +nd-link(href="ha-edit-space-rules.html") Spacepool - Edit Space - House Rules (ha-edit-space-rules.html)
           +e.group#nav-ha
             +e.head
               +page-title Страницы Host Account (only HD breakpoint)
