--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -411,7 +411,7 @@
 
         svg {
           @include rule(width, (xl: 16px, xlg: 16, lg: 16, md: 16, sm: 16));
-          @include rule(width, (xl: 16px, xlg: 16, lg: 16, md: 16, sm: 16));
+          @include rule(height, (xl: 16px, xlg: 16, lg: 16, md: 16, sm: 16));
 
           flex: none;
           fill: $nd-color-basic;
