--- a/app/blocks/form/nd-form.scss
+++ b/app/blocks/form/nd-form.scss
@@ -1171,6 +1171,11 @@
       @include rule(padding-bottom, (xl: 118px, xlg: 118, lg: 77, md: 64, sm: 47));
     }
 
+    &_mod {
+      @include rule(padding-top, (xl: 55px, xlg: 55, lg: 52, md: 52, sm: 32));
+      @include rule(padding-bottom, (xl: 64px, xlg: 64, lg: 48, md: 40, sm: 40));
+    }
+
     #{$b} {
       &__content {
         &:not(:first-child) {
