--- a/app/blocks/section/nd-section.pug
+++ b/app/blocks/section/nd-section.pug
@@ -1,5 +1,5 @@
-mixin nd-section()
-  +b.SECTION.nd-section&attributes(attributes)
+mixin nd-section(tag)
+  +b(tag || 'section').nd-section&attributes(attributes)
     block
 
 mixin nd-section-header()
