--- a/app/blocks/step-info/step-info.scss
+++ b/app/blocks/step-info/step-info.scss
@@ -54,7 +54,7 @@
       }
     }
 
-    &_listing {
+    &_grid {
       img {
         @include rule(width, (xl: 65px, xlg: 65, lg: 65, md: 65, sm: 65));
         @include rule(height, (xl: 39px, xlg: 39, lg: 39, md: 39, sm: 39));
