--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -45,9 +45,9 @@ block content
               +nd-link(href="add-space-rules.html") Spacepool - Add Space - House rules(add-space-rules.html)
               //- +nd-link(href="add-space-photo.html") Spacepool - Add Space - Photo (add-space-photo.html)
               //- +nd-link(href="add-space-photo-2.html") Spacepool - Add Space - Photo (2 page)(add-space-photo-2.html)
-              //- +nd-link(href="add-space-conditions.html") Spacepool - Add Space - Terms and conditions (add-space-conditions.html)
-              //- +nd-link(href="add-space-conditions-2.html") Spacepool - Add Space - Terms and conditions (2 page) (add-space-conditions-2.html)
-              //- +nd-link(href="add-space-listing.html") Spacepool - Add Space - Listing (add-space-listing.html)
+              +nd-link(href="add-space-conditions.html") Spacepool - Add Space - Terms and conditions (add-space-conditions.html)
+              +nd-link(href="add-space-conditions-2.html") Spacepool - Add Space - Terms and conditions (page 2) (add-space-conditions-2.html)
+              +nd-link(href="add-space-listing.html") Spacepool - Add Space - Listing (add-space-listing.html)
           //- +e.group#nav-edit-space
           //-   +e.head
           //-     +page-title Страницы Host Account - Edit Space
@@ -56,6 +56,8 @@ block content
           //-     +nd-link(href="ha-edit-space-description.html") Spacepool - Edit Space - Title and Description (ha-edit-space-description.html)
           //-     +nd-link(href="ha-edit-space-facilities.html") Spacepool - Edit Space - Facilities (ha-edit-space-facilities.html)
           //-     +nd-link(href="ha-edit-space-rules.html") Spacepool - Edit Space - House Rules (ha-edit-space-rules.html)
+          //-     +nd-link(href="ha-edit-space-conditions.html") Spacepool - Edit Space - Terms and conditions (ha-edit-space-conditions.html)
+          //-     +nd-link(href="ha-edit-space-conditions-2.html") Spacepool - Edit Space - Terms and conditions (page 2) (ha-edit-space-conditions-2.html)
           +e.group#nav-ha
             +e.head
               +page-title Страницы Host Account (only HD breakpoint)
