--- a/app/blocks/form-panel/nd-form-panel.scss
+++ b/app/blocks/form-panel/nd-form-panel.scss
@@ -154,6 +154,21 @@
     &_mw303 {
       @include rule(min-width, (xl: 303px, xlg: 303, lg: 303, md: 303, sm: 180));
     }
+
+    &_mw435 {
+      @include rule(min-width, (xl: 435px, xlg: 435, lg: 435, md: 435, sm: 180));
+
+      @include screen('sm', max, 2) {
+        width: 100%;
+      }
+    }
+  }
+
+  &__savearea {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
   }
 
   &_wide {
@@ -178,15 +193,29 @@
       box-shadow: 0 pxtovw(-1, 375) pxtovw(3, 375) rgba(0, 0, 0, .03);
     }
 
-    .nd-content .nd-container {
-      display: flex;
-    }
-
     #{$b} {
       &__controls {
         padding-left: 0;
         padding-right: 0;
         width: 100%;
+
+        @include grid-column(1, 4);
+        @include grid-row(1, 2);
+
+        @include screen('md', max, 2) {
+          @include grid-column(1, 2);
+          @include grid-row(1, 3);
+        }
+      }
+
+      &__savearea {
+        @include grid-column(3, 4);
+        @include grid-row(1, 2);
+
+        @include screen('md', max, 2) {
+          @include grid-column(1, 2);
+          @include grid-row(1, 3);
+        }
       }
     }
   }
