--- a/app/blocks/space/nd-space.scss
+++ b/app/blocks/space/nd-space.scss
@@ -10,6 +10,10 @@
     display: block;
     width: 100%;
 
+    #{$b}_listing & {
+      padding-top: 63.3%;
+    }
+
     #{$b}_card & {
       box-sizing: border-box;
       padding-top: 63.3%;
@@ -513,6 +517,16 @@
       @include screen('sm', max, 2) {
         font-size: pxtovw(13, 375);
         line-height: 1.08;
+      }
+    }
+
+    #{$b}_listing & {
+      @include rule(font-size, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 20));
+
+      line-height: (24 / 20);
+
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 9px, xlg: 9, lg: 9, md: 9, sm: 6));
       }
     }
 
@@ -1118,6 +1132,26 @@
       padding: pxtovw(13, 375) pxtovw(16, 375);
     }
 
+    #{$b}_listing & {
+      padding: 15px 19px;
+
+      @include screen('xlg', max, 2) {
+        padding: pxtovw(15, 1660) pxtovw(19, 1660);
+      }
+
+      @include screen('lg', max, 2) {
+        padding: pxtovw(15, 1366) pxtovw(19, 1366);
+      }
+
+      @include screen('md', max, 2) {
+        padding: pxtovw(15, 960) pxtovw(19, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        padding: pxtovw(13, 375) pxtovw(18, 375);
+      }
+    }
+
     #{$b}_search-card & {
       padding: 0;
       padding-left: 30px;
@@ -1188,6 +1222,14 @@
           margin-left: pxtovw(14, 375);
         }
       }
+    }
+  }
+
+  &__info {
+    @include rule(padding-bottom, (xl: 58px, xlg: 58, lg: 58, md: 56, sm: 56));
+
+    &:not(:first-child) {
+      @include rule(margin-top, (xl: 60px, xlg: 60, lg: 60, md: 60, sm: 60));
     }
   }
 
@@ -1919,5 +1961,32 @@
     align-items: center;
     box-sizing: border-box;
     width: 100%;
+  }
+
+  &_listing {
+    @include rule(border-radius, (xl: 3px, xlg: 3, lg: 3, md: 3, sm: 3));
+    @include rule(border-width, (xl: 1px, xlg: 1, lg: 1, md: 1, sm: 0));
+
+    box-sizing: border-box;
+    border-style: solid;
+    border-color: #e5eef0;
+    overflow: hidden;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, .02), 2px 2px 2px rgba(0, 0, 0, .04), 1px 1px 1px rgba(0, 0, 0, .03);
+
+    @include screen('xlg', max, 2) {
+      box-shadow: pxtovw(3, 1660) pxtovw(3, 1660) pxtovw(3, 1660) rgba(0, 0, 0, .02),pxtovw(2, 1660) pxtovw(2, 1660) pxtovw(2, 1660) rgba(0, 0, 0, .04), pxtovw(1, 1660) pxtovw(1, 1660) pxtovw(1, 1660) rgba(0, 0, 0, .03);
+    }
+
+    @include screen('lg', max, 2) {
+      box-shadow: pxtovw(3, 1366) pxtovw(3, 1366) pxtovw(3, 1366) rgba(0, 0, 0, .02),pxtovw(2, 1366) pxtovw(2, 1366) pxtovw(2, 1366) rgba(0, 0, 0, .04), pxtovw(1, 1366) pxtovw(1, 1366) pxtovw(1, 1366) rgba(0, 0, 0, .03);
+    }
+
+    @include screen('md', max, 2) {
+      box-shadow: pxtovw(3, 960) pxtovw(3, 960) pxtovw(3, 960) rgba(0, 0, 0, .02),pxtovw(2, 960) pxtovw(2, 960) pxtovw(2, 960) rgba(0, 0, 0, .04), pxtovw(1, 960) pxtovw(1, 960) pxtovw(1, 960) rgba(0, 0, 0, .03);
+    }
+
+    @include screen('sm', max, 2) {
+      box-shadow: pxtovw(3, 375) pxtovw(3, 375) pxtovw(3, 375) rgba(0, 0, 0, .02),pxtovw(2, 375) pxtovw(2, 375) pxtovw(2, 375) rgba(0, 0, 0, .04), pxtovw(1, 375) pxtovw(1, 375) pxtovw(1, 375) rgba(0, 0, 0, .03);
+    }
   }
 }
