--- a/app/pages/add-space/add-space-conditions.pug
+++ b/app/pages/add-space/add-space-conditions.pug
@@ -29,9 +29,35 @@ block content
     .nd-container
       +nd-content-aside
         +sidebar-nosticky.nd-sidebar.nd-hide-md
-          +nd-side-navigation({addManager: {image: {src:  "assets/images/nd/add-rules.svg", class: "_rules"}, subtitle: "Step 6", title: "Terms & Conditions" }, note: {text: "Click on the map, then zoom and drag until the cursor points to your workspace."}})._add
+          +nd-side-navigation({addManager: {image: {src:  "assets/images/nd/add-rules.svg", class: "_rules"}, subtitle: "Step 6", title: "Terms &amp; Conditions" }, note: {text: "Click on the map, then zoom and drag until the cursor points to your workspace."}})._add
 
       +nd-content-main
+        +info-grid('form')(data-validated-form)
+          +e.describe
+            +e.H3.title_fz22._fw400 Add terms and conditions for&nbsp;every listing type
+            +e.text Please indicate the types of listings that are presented in your room. You will then need to provide terms &amp; conditions for all types of listings.
+
+          +e.media.hide-sm
+            +e.PICTURE.image
+              +e.SOURCE(srcset="assets/images/nd/add-space-t&c-mobile.jpg" media="(max-width: 1029px)")
+              +e.SOURCE(srcset="assets/images/nd/add-space-t&c.jpg" media="(min-width: 1030px)")
+              img(srcset="assets/images/nd/add-space-t&c.jpg")
+
+          +e.list
+            +nd-checkbox({name: 'listingType', value: "hd"})._gray-box._stolzl.__item Hot desks
+            +nd-checkbox({name: 'listingType', value: "fd"})._gray-box._stolzl.__item Fixed Desks
+            +nd-checkbox({name: 'listingType', value: "mr"})._gray-box._stolzl.__item Meeting Rooms
+            +nd-checkbox({name: 'listingType', value: "po"})._gray-box._stolzl.__item Private offices
+
+          +e.info
+            +e.text_fz15 You should offer at least 1 listing type
+
+          +nd-form-panel()._wide.is-fixed
+            .nd-content
+              .nd-container
+                +e.controls
+                  +nd-link-icon('arrow6')._underline._back._back_long.__back Back <span class="nd-hide-sm"> to previous step</span>
+                  +nd-button-icon('button', {iconBlock: true, icon: 'next', loader: true})._next._sm-h32._sm-fz16.__button_mw303(type="submit") Save and continue
 
 block panels
 
