--- a/app/pages/add-space/add-space-listing.pug
+++ b/app/pages/add-space/add-space-listing.pug
@@ -29,10 +29,40 @@ block content
     .nd-container
       +nd-content-aside
         +sidebar-nosticky.nd-sidebar.nd-hide-md
-          +nd-side-navigation({addManager: {image: {src:  "assets/images/nd/add-photo.svg"}, subtitle: "Step 7", title: "Listing" }, note: {text: "Click on the map, then zoom and drag until the cursor points to your workspace."}})._add
+          +nd-side-navigation({addManager: {image: {src: "assets/images/nd/add-listing.svg", class: "_grid"}, subtitle: "Step 7", title: "Listing" }, note: {text: "Click on the map, then zoom and drag until the cursor points to your workspace."}})._add
 
       +nd-content-main
+        +info-grid._list
+          +e.describe
+            +e.H3.title_fz43._fw400 Your space <br> is almost set up!
+            +e.text You succesfully added your space to Spacepool and you are almost ready to offer your listings.
+          +nd-space('section')._listing.__space
+            - var item = {gallery: {images: ["assets/images/nd/space2.jpg", "assets/images/nd/space1.jpg", "assets/images/nd/space6.jpg", "assets/images/nd/space7.jpg"], buttons: true, buttonsClass: "_small"}, address: ["London", "Mayfare", "EC2A 4 SD"], title: "First Base - Cannon Street"}
+            +gallery(item.gallery)._space.__media.js-nd-gallery
+            +e.describe
+              +e.address
+                each el in item.address
+                  span!= el
+              +e.title._proxima._bold!=item.title
+              +text-block._gray._tac.__info
+                +e.title_fz20 No listings yet
+                +e.content_fz15._mt20 Please add some listings to your space
 
+
+          +e.info
+            +e.text
+              p Spaces on Spacepool are visible for tenants only if it has at least one listing to offer.
+              p
+                b Please add at least one listing inside your space.
+            +e.buttons
+              +nd-button-icon('', {image: {src: 'assets/images/nd/color-romb.svg', cls: '_colors _abs _abs_start'}})._pad48._sm-wide.__button Add listings
+
+          +nd-form-panel()._wide.is-fixed
+            .nd-content
+              .nd-container
+                +e.controls
+                  +nd-link-icon('arrow6')._underline._back._back_long.__back Back <span class="nd-hide-sm"> to previous step</span>
+                  +nd-button-icon('button', {iconBlock: true, icon: 'next', loader: true})._next._sm-h32._sm-fz16.__button_mw303(type="button") Finish
 block panels
 
 block popups
